@@ -151,6 +151,8 @@ enum {
       flatflatSym,
       flatflatslashSym,
       sharpsharpSym,
+      soriSym,
+      koronSym,
 
       rightparenSym,
       leftparenSym,
