@@ -1,3 +1,5 @@
+9.jul  (la)
+      - add sori and koron persian accidentals
 8.jul  (lv)
       - fix #11441: Failure to read MusicXML file with missing parts
 3.jul  (la)
